@startuml
class AppContext {
}
class GameBootstrap {
    - _instance : GameBootstrap
}
class GameEventBus {
}
class GameStateManager {
    + Instance : GameStateManager
}
class MainMenuStart {
}
class SceneService {
}
class SessionService {
}
class AppConfigSO {
    + bootSceneName : string
    + mainMenuSceneName : string
    + demoEpisodeSceneName : string
    + skipMainMenuAndAutoStartEpisode : bool
    + traceTaxonomy : TraceTaxonomySO
}
class TraceTaxonomySO {
    + traceTypes : TraceTypeSO[]
}
class TraceTypeSO {
    + traceTypeId : string
    + displayName : string
    + riskWeight : int
}
class FeedbackItem {
    + title : string
    + detail : string
    + scoreDelta : int
}
class FeedbackReport {
    + totalRiskScore : int
    + items : List<FeedbackItem>
    + rawSummaryText : string
}
class FeedbackService {
    - _trace : TraceService
    - _taxonomy : SeriousGame.Content.TraceTaxonomySO
    - _state : PlayerStateService
}
class StateFlagInteractable {
    + flagKey : string
    + valueToSet : bool
    + oneShot : bool
    - _used : bool
    + interactPrompt : GameObject
}
class TeleportInteractable {
    + player : PlayerController
    + destinationPoint : Transform
    + requiredFlagKey : string
    + requiredValue : bool
    + oneShot : bool
    - _used : bool
}
class GameStateVariableStorage {
    - Manager : GameStateManager
}
class NarrativeService {
    - _context : AppContext
    - _runner : DialogueRunner
    - _player : PlayerController
}
class YarnAutoStart {
    + nodeName : string
    + startOnEnable : bool
}
class YarnCommandBridge {
    - Context : AppContext
}
class YarnVariableBridge {
    - _context : AppContext
}
class PhoneUIListener {
}
class PlayerController {
    + interactDistance : float
    + interactableLayer : LayerMask
    + moveSpeed : float
    + mouseSensitivity : float
    + cameraHolder : Transform
    - rb : Rigidbody
    - xRotation : float
    + isLocked : bool
}
interface IInteractable {
}
class NodeInteractable {
    + nodeName : string
}
class SaveFlagEntry {
    + key : string
    + value : bool
}
class SaveData {
    + sessionId : string
    + participantId : string
    + currentEpisodeId : string
    + currentUnityScene : string
    + currentYarnNode : string
    + playerState : PlayerStateSnapshot
    + flags : List<SaveFlagEntry>
}
class SaveService {
    - _session : SessionService
    - _state : PlayerStateService
    - _savePath : string
    + SavePath : string
}
class GameStateKeys {
    + Money : string
    + Suspicion : string
    + Confidence : string
    + Support : string
    + Trauma : string
    + Trust : string
    + AllKeys : string[]
    + DefaultKeys : string[]
}
class PlayerStateService {
}
class PlayerStateEntry {
    + key : string
    + value : int
}
class PlayerStateSnapshot {
    + entries : List<PlayerStateEntry>
}
class FileTraceStore {
    - _filePath : string
    - _lock : object
    + FilePath : string
}
class InMemoryTraceStore {
    - _events : List<TraceEvent>
}
interface ITraceStore {
}
class TraceEvent {
    + sessionId : string
    + actor : string
    + verb : string
    + objectId : string
    + result : ResultData
    + context : ContextData
    + unixMs : long
}
class ResultData {
    + scoreDelta : float
    + isCorrect : bool
}
class ContextData {
    + episodeId : string
    + yarnNode : string
    + unityScene : string
    + stateBefore : PlayerStateSnapshot
}
class TraceService {
    - _store : ITraceStore
    - _persistentStore : ITraceStore
}
class BillboardToCamera {
    + target : Transform
}
class OutcomeToastUI {
    - _co : Coroutine
}
class ScreenFader {
    + Instance : ScreenFader
    + canvasGroup : CanvasGroup
}
class ToastUIListener {
}
MonoBehaviour <|-- AppContext
MonoBehaviour <|-- GameBootstrap
MonoBehaviour <|-- GameStateManager
MonoBehaviour <|-- MainMenuStart
ScriptableObject <|-- AppConfigSO
ScriptableObject <|-- TraceTaxonomySO
ScriptableObject <|-- TraceTypeSO
MonoBehaviour <|-- StateFlagInteractable
MonoBehaviour <|-- TeleportInteractable
VariableStorageBehaviour <|-- GameStateVariableStorage
MonoBehaviour <|-- YarnAutoStart
MonoBehaviour <|-- YarnCommandBridge
MonoBehaviour <|-- YarnVariableBridge
MonoBehaviour <|-- PhoneUIListener
MonoBehaviour <|-- PlayerController
MonoBehaviour <|-- NodeInteractable
IInteractable <|.. NodeInteractable
ITraceStore <|-- FileTraceStore
ITraceStore <|-- InMemoryTraceStore
MonoBehaviour <|-- BillboardToCamera
MonoBehaviour <|-- OutcomeToastUI
MonoBehaviour <|-- ScreenFader
MonoBehaviour <|-- ToastUIListener
AppConfigSO --> TraceTaxonomySO : traceTaxonomy
FeedbackService --> TraceService : _trace
FeedbackService --> PlayerStateService : _state
TeleportInteractable --> PlayerController : player
GameStateVariableStorage --> GameStateManager : Manager
NarrativeService --> AppContext : _context
NarrativeService --> PlayerController : _player
YarnCommandBridge --> AppContext : Context
YarnVariableBridge --> AppContext : _context
SaveData --> PlayerStateSnapshot : playerState
SaveService --> SessionService : _session
SaveService --> PlayerStateService : _state
TraceEvent --> ResultData : result
TraceEvent --> ContextData : context
ContextData --> PlayerStateSnapshot : stateBefore
TraceService --> ITraceStore : _store, _persistentStore
@enduml
